--- a/package.json
+++ b/package.json
@@ -3,9 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "font-awesome": "^4.7.0",
+    "match-sorter": "^2.3.0",
+    "mobx": "^5.5.1",
+    "mongo": "^0.1.0",
+    "mongoose": "^5.3.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-fontawesome": "^1.6.1",
+    "react-scripts": "2.0.5",
+    "react-spinners": "^0.4.7",
+    "router": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
