--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "react-dev-utils": "^6.0.5",
     "react-dom": "^16.5.2",
     "react-fontawesome": "^1.6.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-spinners": "^0.4.7",
     "resolve": "1.8.1",
     "router": "^1.3.3",
@@ -120,7 +122,12 @@
   },
   "babel": {
     "plugins": [
-      ["@babel/plugin-proposal-decorators", { "legacy": true }]
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ]
     ],
     "presets": [
       "react-app"
