--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "font-awesome": "^4.7.0",
     "fs-extra": "7.0.0",
     "html-webpack-plugin": "4.0.0-alpha.2",
+    "http": "0.0.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
@@ -62,6 +63,8 @@
     "resolve": "1.8.1",
     "router": "^1.3.3",
     "sass-loader": "7.1.0",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
