--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
+    "clarifai": "^2.9.0",
     "cors": "^2.8.4",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
